welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:12: error: too many arguments for method droite: ()Unit
        droite(2)
              ^SlugHunting:40: error: not found: value leveBrossse
  leveBrossse()
  ^